--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 .schedule {
 
   &__body {
-    padding: 15px 0;
+    padding: 0;
   }
 
   &__card {
@@ -14,12 +14,37 @@
       margin: 0;
       padding: 10px 15px;
       background: #cce5ff;
+      white-space: nowrap;
+      font-size: 1.25em;
     }
 
-    &-body {
-      padding: 15px;
+  }
+
+  &__table {
+    width: 100%;
+    text-align: center;
+
+    thead {
+      font-weight: bold;
     }
 
+    tbody {
+
+      tr:nth-of-type(even) {
+        background: #eee;
+      }
+
+      td {
+        min-width: 115px;
+        padding: 15px 15px;
+      }
+
+    }
+
+  }
+
+  &__btn {
+    margin: 15px;
   }
 
 }
