--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+body {
+  min-height: 100vh;
+  position: relative; }
+  body:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/bg.jpg") repeat;
+    opacity: .15; }
+
 .schedule__body {
   padding: 0; }
 .schedule__card {
@@ -19,9 +32,14 @@
   .schedule__table tbody tr:nth-of-type(even) {
     background: #eee; }
   .schedule__table tbody td {
-    min-width: 115px;
     padding: 15px 15px; }
+  .schedule__table_xl {
+    font-size: .8em; }
 .schedule__btn {
   margin: 15px; }
+
+@media (max-width: 1199px) {
+  .schedule__card-title {
+    font-size: 1em; } }
 
 /*# sourceMappingURL=style.css.map */
