--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,18 @@
+body {
+  min-height: 100vh;
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/bg.jpg") repeat;
+    opacity: .15;
+  }
+}
+
 .schedule {
 
   &__body {
@@ -35,16 +50,36 @@
       }
 
       td {
-        min-width: 115px;
+        //min-width: 115px;
         padding: 15px 15px;
       }
 
+    }
+
+    &_xl {
+      font-size: .8em;
     }
 
   }
 
   &__btn {
     margin: 15px;
+  }
+
+}
+
+@media (max-width: 1199px) {
+
+  .schedule {
+
+    &__card {
+
+      &-title {
+        font-size: 1em;
+      }
+
+    }
+
   }
 
 }
